Front em beta mas funcionando faltando feature montar dieta

--- a/paginas/Mediterranea.html
+++ b/paginas/Mediterranea.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Caio Vinicius Braga">
-    <title>Tipos De Dieta</title>
+    <title>Dieta Mediterrânea</title>
     <link rel="stylesheet" href="..\estilos\TiposDeDieta.css">
     <script src="../codigo/carrocel.js"></script>
     <script src="../codigo/mudaconteudo.js"></script>
@@ -46,7 +46,7 @@
     </header>
     <!-- sessão de conteúdos do site-->
     <div class="TituloConteudoSection"><!--Titulo do Conteúdo-->
-        <h1>Tipos de <span class="DestaqueTituloConteudoSection">Dieta</span> </h1>
+        <h1>Dieta <span class="DestaqueTituloConteudoSection">Mediterrânea</span> </h1>
     </div>
 
     <section class="ConteudoSection">
@@ -54,47 +54,19 @@
             <div class="TextoConteudoSection">
                 <h1>Mediterrânea</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='Mediterranea.html'">Mediterrânea</button>
+                    amet consectetur adipisicing elit. Magnam, impedit. Lorem ipsum dolor sit amet consect
+                    etur adipisicing elit. Rerum explicabo, maiores consequuntur totam quis ipsum quia p
+                    erferendis quod voluptatibus similique. Maxime optio veritatis alias rem enim unde invento
+                    re excepturi, a pariatur, et natus at aspernatur quibusdam aperiam consectetur nemo earum si
+                    milique consequuntur porro rerum sapiente quae nihil maiores labore? Enim debitis quo id mol
+                    estiae odit numquam recusandae, provident nemo vel sequi rem optio laudantium ex commodi por
+                    ro saepe iure? Molestiae quidem sunt vitae architecto autem harum inventore, et id vero perfe
+                    rendis pariatur asperiores libero voluptatem ducimus a optio dignissimos deleniti nemo nobis!
+                     Nostrum asperiores dolorum quos nihil fugiat recusandae quas?</p>
+                <button onclick="window.location.href='TiposDeDieta.html'">Voltar</button>
             </div>
             <div class="ImagemConteudoSection">
                 <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
-            </div>
-        </div>
-
-        <div class="ConteinerConteudoSection">
-            <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
-            </div>
-            <div class="TextoConteudoSection">
-                <h1>Low Carb</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='LowCarb.html'" >Low Carb</button>
-            </div>
-        </div>
-
-        <div class="ConteinerConteudoSection">
-            <div class="TextoConteudoSection">
-                <h1>Cetogênica</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='Cetogenica.html'" >Cetogênica</button>
-            </div>
-            <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
-            </div>
-        </div>
-
-        <div class="ConteinerConteudoSection">
-            <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
-            </div>
-            <div class="TextoConteudoSection">
-                <h1>Vegetariana</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='Vegetariana.html'" >Vegetariana</button>
             </div>
         </div>
     </section>
