--- a/paginas/CriarDietas.html
+++ b/paginas/CriarDietas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/ConsumoAgua.css">
-    <title>Consumo Agua</title>
+    <link rel="stylesheet" href="../estilos/CalcularMetabolismo.css">
+    <title>Criar Dieta</title>
 </head>
 <body>
       <header class="CabecalhoIndex">
@@ -44,6 +44,14 @@
     <div class="form-group">
       <label for="peso">Peso (kg)</label>
       <input type="number" id="peso" placeholder="Ex: 70" step="0.1" required />
+    </div>
+    <div class="form-group">
+      <label for="altura">Altura (m)</label>
+      <input type="number" id="altura" placeholder="Ex: 1.75" step="0.01" required />
+    </div>
+    <div class="form-group">
+      <label for="idade">Idade</label>
+      <input type="number" id="idade" placeholder="Ex: (0 - 60+)" step="1" required />
     </div>
     <button class="btn" onclick="calcularIMC()">Calcular</button>
     <div class="resultado" id="resultado"></div>
