--- a/paginas/index.html
+++ b/paginas/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Caio Vinicius Braga">
-    <title>Nutricao</title>
+    <title>Home</title>
     <link rel="stylesheet" href="..\estilos\index.css">
     <script src="../codigo/carrocel.js"></script>
     <script src="../codigo/mudaconteudo.js"></script>
@@ -54,10 +54,6 @@
                     recusandae qui harum maxime consequuntur natus. Ab minima sunt laboriosam ipsum alias quisquam exercitationem..</p>
                 <div class="BotoesConteiner">
                     <button onclick="changeContent()">Lorem, ipsum.</button>
-                    <button>Lorem, ipsum.</button>
-                    <button>Lorem, ipsum.</button>
-                    <button>Lorem, ipsum.</button>
-                    <button>Lorem, ipsum.</button>
                 </div>
             </div>
             
@@ -107,7 +103,7 @@
                 <h1>Criar dietas</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button>Criar dietas</button>
+                <button onclick="window.location.href='CriarDieta.html'">Criar dietas</button>
             </div>
             <div class="ImagemConteudoSection">
                 <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
@@ -122,7 +118,7 @@
                 <h1>Tipos de dieta</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button>Tipos de dieta</button>
+                <button onclick="window.location.href='TiposDeDieta.html'">Tipos de dieta</button>
             </div>
         </div>
 
@@ -131,7 +127,7 @@
                 <h1>Calcular IMC</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button>Calcular IMC</button>
+                <button onclick="window.location.href='CalcularImc.html'">Calcular IMC</button>
             </div>
             <div class="ImagemConteudoSection">
                 <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
@@ -146,7 +142,7 @@
                 <h1>Calcular Metabolismo</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button>Calcular Metabolismo</button>
+                <button onclick="window.location.href='CalcularMetabolismo.html'">Calcular Metabolismo</button>
             </div>
         </div>
 
@@ -155,7 +151,7 @@
                 <h1>Consumo de Agua</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button>Consumo de Agua</button>
+                <button onclick="window.location.href='ConsumoAgua.html'">Consumo de Agua</button>
             </div>
             <div class="ImagemConteudoSection">
                 <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
