Beta: versão com telas criadas e sem funcionar nada faltando tela de pagamento e recursividade

--- a/paginas/Cetogenica.html
+++ b/paginas/Cetogenica.html
@@ -16,7 +16,7 @@
     <header class="CabecalhoIndex">
         <div class="MenuCabecalho">
             <div class="imagemLogoCabecalho">
-                <img onclick="window.location.href='index.html'" src="logo" alt="ImagemLogo">
+                <img  onclick="window.location.href='index.html'" src="../imagens/logo.png" alt="ImagemLogo">
             </div>
 
             <div class="IntensCabecalhoIndex">
