--- a/paginas/index.html
+++ b/paginas/index.html
@@ -16,7 +16,7 @@
     <header class="CabecalhoIndex">
         <div class="MenuCabecalho">
             <div class="imagemLogoCabecalho">
-                <img src="logo" alt="ImagemLogo">
+                <img src="../imagens/logo.png" alt="ImagemLogo">
             </div>
 
             <div class="IntensCabecalhoIndex">
@@ -48,8 +48,8 @@
     <section class="Conteiner"><!-- Conteiner central dos botões-->
         <div class="ConteudoConteiner">
             <div class="TextosConteiner">
-                <p>Lorem ipsum dolor sit.</p>
-                <h1>Lorem, ipsum dolor.</h1>
+                <p>Em desenvolvimento.</p>
+                <h1>Site nutricionista A3</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, suscipit accusamus amet dolorem odit pariatur magnam 
                     recusandae qui harum maxime consequuntur natus. Ab minima sunt laboriosam ipsum alias quisquam exercitationem..</p>
                 <div class="BotoesConteiner">
@@ -94,7 +94,7 @@
 
     <!-- sessão de conteúdos do site-->
     <div class="TituloConteudoSection"><!--Titulo do Conteúdo-->
-        <h1><span class="DestaqueTituloConteudoSection">Lorem, ipsum dolor.</span> Lorem ipsum dolor sit amet.</h1>
+        <h1><span class="DestaqueTituloConteudoSection">Explore</span> as nossas opções</h1>
     </div>
 
     <section class="ConteudoSection">
@@ -103,7 +103,7 @@
                 <h1>Criar dietas</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='CriarDieta.html'">Criar dietas</button>
+                <button onclick="window.location.href='CriarDietas.html'">Criar dietas</button>
             </div>
             <div class="ImagemConteudoSection">
                 <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
