--- a/paginas/CriarDietas.html
+++ b/paginas/CriarDietas.html
@@ -10,7 +10,7 @@
       <header class="CabecalhoIndex">
         <div class="MenuCabecalho">
             <div class="imagemLogoCabecalho">
-                <img  onclick="window.location.href='index.html'" src="logo" alt="ImagemLogo">
+                <img  onclick="window.location.href='index.html'" src="../imagens/logo.png" alt="ImagemLogo">
             </div>
 
             <div class="IntensCabecalhoIndex">
@@ -42,6 +42,10 @@
   <div class="container">
     <h2>Informe seus dados</h2>
     <div class="form-group">
+      <label for="idade">Dieta</label>
+      <input type="" id="dieta" placeholder="Ex: (Tipo de Dieta)" required />
+    </div>
+    <div class="form-group">
       <label for="peso">Peso (kg)</label>
       <input type="number" id="peso" placeholder="Ex: 70" step="0.1" required />
     </div>
@@ -53,7 +57,23 @@
       <label for="idade">Idade</label>
       <input type="number" id="idade" placeholder="Ex: (0 - 60+)" step="1" required />
     </div>
-    <button class="btn" onclick="calcularIMC()">Calcular</button>
+    <div class="form-group">
+      <label for="idade">sexo</label>
+      <input type="number" id="sexo" placeholder="Sexo" step="1" required />
+    </div>
+    <div class="form-group">
+      <label for="idade">Objetivo</label>
+      <input type="number" id="objetivo" placeholder="emagrecer" step="1" required />
+    </div>
+    <div class="form-group">
+      <label for="idade">Alimentos</label>
+      <input type="number" id="alimentos" placeholder="alimentos" step="1" required />
+    </div>
+    <div class="form-group">
+      <label for="idade">Alergia</label>
+      <input type="number" id="alimentos" placeholder="alimentos" step="1" required />
+    </div>
+    <button class="btn" onclick="calcularIMC()">Gerar dieta</button>
     <div class="resultado" id="resultado"></div>
   </div>
 </html>
