--- a/paginas/TiposDeDieta.html
+++ b/paginas/TiposDeDieta.html
@@ -16,7 +16,7 @@
     <header class="CabecalhoIndex">
         <div class="MenuCabecalho">
             <div class="imagemLogoCabecalho">
-                <img onclick="window.location.href='index.html'" src="logo" alt="ImagemLogo">
+                <img  onclick="window.location.href='index.html'" src="../imagens/logo.png" alt="ImagemLogo">
             </div>
 
             <div class="IntensCabecalhoIndex">
