--- a/nutrifacil/frontend/paginas/dietas/TiposDeDieta.html
+++ b/nutrifacil/frontend/paginas/dietas/TiposDeDieta.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Caio Vinicius Braga">
     <title>Tipos De Dieta</title>
-    <link rel="stylesheet" href="..\estilos\TiposDeDieta.css">
+    <link rel="stylesheet" href="..\..\estilos\TiposDeDieta.css">
     <script src="../codigo/carrocel.js"></script>
     <script src="../codigo/mudaconteudo.js"></script>
     <script src="../codigo/abrelink.js"></script>
@@ -55,22 +55,22 @@
                 <h1>Mediterrânea</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='Mediterranea.html'">Mediterrânea</button>
+                <button onclick="window.location.href='nutricao/Mediterranea.html'">Mediterrânea</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../../imagens/mediterranea.jpg" alt="A primeira Imagem de conteudo">
             </div>
         </div>
 
         <div class="ConteinerConteudoSection">
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../../imagens/lowCarb.jfif" alt="A primeira Imagem de conteudo">
             </div>
             <div class="TextoConteudoSection">
                 <h1>Low Carb</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='LowCarb.html'" >Low Carb</button>
+                <button onclick="window.location.href='nutricao/LowCarb.html'" >Low Carb</button>
             </div>
         </div>
 
@@ -79,22 +79,22 @@
                 <h1>Cetogênica</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='Cetogenica.html'" >Cetogênica</button>
+                <button onclick="window.location.href='nutricao/Cetogenica.html'" >Cetogênica</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../../imagens/cetogenica.jpg" alt="A primeira Imagem de conteudo">
             </div>
         </div>
 
         <div class="ConteinerConteudoSection">
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../../imagens/306cd823d976db6d5ef3d95f9159.jpg" alt="A primeira Imagem de conteudo">
             </div>
             <div class="TextoConteudoSection">
                 <h1>Vegetariana</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='Vegetariana.html'" >Vegetariana</button>
+                <button onclick="window.location.href='nutricao/Vegetariana.html'" >Vegetariana</button>
             </div>
         </div>
     </section>
