--- a/nutrifacil/frontend/paginas/dietas/nutricao/Mediterranea.html
+++ b/nutrifacil/frontend/paginas/dietas/nutricao/Mediterranea.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Caio Vinicius Braga">
     <title>Dieta Mediterrânea</title>
-    <link rel="stylesheet" href="..\estilos\TiposDeDieta.css">
+    <link rel="stylesheet" href="../../../estilos/TiposDeDieta.css">
     <script src="../codigo/carrocel.js"></script>
     <script src="../codigo/mudaconteudo.js"></script>
     <script src="../codigo/abrelink.js"></script>
@@ -66,7 +66,7 @@
                 <button onclick="window.location.href='TiposDeDieta.html'">Voltar</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../../../imagens/mediterranea.jpg" alt="A primeira Imagem de conteudo">
             </div>
         </div>
     </section>
