--- a/nutrifacil/frontend/paginas/dietas/nutricao/Vegetariana.html
+++ b/nutrifacil/frontend/paginas/dietas/nutricao/Vegetariana.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Caio Vinicius Braga">
     <title>Dieta Vegetariana</title>
-    <link rel="stylesheet" href="..\estilos\TiposDeDieta.css">
+    <link rel="stylesheet" href="../../../estilos/TiposDeDieta.css">
     <script src="../codigo/carrocel.js"></script>
     <script src="../codigo/mudaconteudo.js"></script>
     <script src="../codigo/abrelink.js"></script>
@@ -16,7 +16,7 @@
     <header class="CabecalhoIndex">
         <div class="MenuCabecalho">
             <div class="imagemLogoCabecalho">
-                <img  onclick="window.location.href='index.html'" src="../imagens/logo.png" alt="ImagemLogo">
+                <img  onclick="window.location.href='index.html'" src="../../../imagens/logo.png" alt="ImagemLogo">
             </div>
 
             <div class="IntensCabecalhoIndex">
@@ -66,7 +66,7 @@
                 <button onclick="window.location.href='TiposDeDieta.html'">Voltar</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../../../imagens/306cd823d976db6d5ef3d95f9159.jpg" alt="A primeira Imagem de conteudo">
             </div>
         </div>
     </section>
