--- a/nutrifacil/frontend/paginas/calculo/ConsumoAgua.html
+++ b/nutrifacil/frontend/paginas/calculo/ConsumoAgua.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/ConsumoAgua.css">
+    <link rel="stylesheet" href="../../estilos/ConsumoAgua.css">
     <title>Consumo Agua</title>
 </head>
 <body>
       <header class="CabecalhoIndex">
         <div class="MenuCabecalho">
             <div class="imagemLogoCabecalho">
-                <img  onclick="window.location.href='index.html'" src="../imagens/logo.png" alt="ImagemLogo">
+                <img  onclick="window.location.href='../../paginas/index.html'" src="../../imagens/logo.png" alt="ImagemLogo">
             </div>
 
             <div class="IntensCabecalhoIndex">
