--- a/nutrifacil/frontend/paginas/dietas/CriarDietas.html
+++ b/nutrifacil/frontend/paginas/dietas/CriarDietas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/CalcularMetabolismo.css">
+    <link rel="stylesheet" href="../../estilos/CalcularMetabolismo.css">
     <title>Criar Dieta</title>
 </head>
 <body>
