--- a/nutrifacil/frontend/paginas/index.html
+++ b/nutrifacil/frontend/paginas/index.html
@@ -60,7 +60,7 @@
             <div class="carousel"><!-- Carrossel -->
                 <div class="carousel-images">
                     <img src="../imagens/carroucel1.jpg" alt="Image 1">
-                    <img src="../imagens/carroucel2.jpeg" alt="Image 2">
+                    <img src="../imagens/carroucel2.jpg" alt="Image 2">
                     <img src="../imagens/carroucel3.jpg" alt="Image 3">
                 </div>
                 <!-- Setas de navegação -->
@@ -103,22 +103,22 @@
                 <h1>Criar dietas</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='CriarDietas.html'">Criar dietas</button>
+                <button onclick="window.location.href='../paginas/dietas/CriarDietas.html'">Criar dietas</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../imagens/criardieta.jfif" alt="A primeira Imagem de conteudo">
             </div>
         </div>
 
         <div class="ConteinerConteudoSection">
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../imagens/tiposDieta.jpg" alt="A primeira Imagem de conteudo">
             </div>
             <div class="TextoConteudoSection">
                 <h1>Tipos de dieta</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='TiposDeDieta.html'">Tipos de dieta</button>
+                <button onclick="window.location.href='../paginas/dietas/TiposDeDieta.html'">Tipos de dieta</button>
             </div>
         </div>
 
@@ -127,22 +127,22 @@
                 <h1>Calcular IMC</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='CalcularImc.html'">Calcular IMC</button>
+                <button onclick="window.location.href='../paginas/calculo/CalcularImc.html'">Calcular IMC</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../imagens/imcImagem.jpg" alt="A primeira Imagem de conteudo">
             </div>
         </div>
 
         <div class="ConteinerConteudoSection">
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../imagens/corrernaEsteira.jfif" alt="A primeira Imagem de conteudo">
             </div>
             <div class="TextoConteudoSection">
                 <h1>Calcular Metabolismo</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='CalcularMetabolismo.html'">Calcular Metabolismo</button>
+                <button onclick="window.location.href='../paginas/calculo/CalcularMetabolismo.html'">Calcular Metabolismo</button>
             </div>
         </div>
 
@@ -151,10 +151,10 @@
                 <h1>Consumo de Agua</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
                     amet consectetur adipisicing elit. Magnam, impedit.</p>
-                <button onclick="window.location.href='ConsumoAgua.html'">Consumo de Agua</button>
+                <button onclick="window.location.href='../paginas/calculo/ConsumoAgua.html'">Consumo de Agua</button>
             </div>
             <div class="ImagemConteudoSection">
-                <img src="../imagens/FundoHome6.jpeg" alt="A primeira Imagem de conteudo">
+                <img src="../imagens/bebendoAgua.jfif" alt="A primeira Imagem de conteudo">
             </div>
         </div>
     </section>
