arrumando integracao e css e front e detalhes back

--- a/nutrifacil/frontend/paginas/dietas/CriarDietas.html
+++ b/nutrifacil/frontend/paginas/dietas/CriarDietas.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #c0b8b8;
+      background-color: #757070;
       color: #ddd;
       padding: 30px;
     }
