--- a/nutrifacil/frontend/paginas/index.html
+++ b/nutrifacil/frontend/paginas/index.html
@@ -21,22 +21,22 @@
 
             <div class="IntensCabecalhoIndex">
                 <!--<img class="ImagemCabecalhoIndex" src="../imagens/telefones.png" alt="ImagemAoLadoDoTexto">!-->
-                <a href="#">Lorem1</a>
+                <a href="#">Nutri</a>
             </div>
             <div class="linhaVertical"></div><!--linha -->
             <div class="IntensCabecalhoIndex">
                 <!--<img class="ImagemCabecalhoIndex" src="../imagens/telefones.png" alt="ImagemAoLadoDoTexto">!-->
-                <a href="#">Lorem, ipsum.</a>
+                <a href="#">Dietas Personalizadas</a>
             </div>
             <div class="linhaVertical"></div><!--linha -->
             <div class="IntensCabecalhoIndex">
                 <!--<img class="ImagemCabecalhoIndex" src="../imagens/telefones.png" alt="ImagemAoLadoDoTexto">!-->
-                <a href="#">Lorem, ipsum.</a>
+                <a href="Pagamento.html">Pagamento</a>
             </div>
             <div class="linhaVertical"></div><!--linha -->
             <div class="IntensCabecalhoIndex">
                 <!--<img class="ImagemCabecalhoIndex" src="../imagens/telefones.png" alt="ImagemAoLadoDoTexto">!-->
-                <a id="lista-ramais" href="#">Lorem, ipsum.</a>
+                <a id="lista-ramais" href="#">Sobre nós</a>
                 <!-- Section com os ramais dentro do link --> 
             </div>
         </div>
@@ -48,12 +48,11 @@
     <section class="Conteiner"><!-- Conteiner central dos botões-->
         <div class="ConteudoConteiner">
             <div class="TextosConteiner">
-                <p>Em desenvolvimento.</p>
+                <p></p>
                 <h1>Site nutricionista A3</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, suscipit accusamus amet dolorem odit pariatur magnam 
-                    recusandae qui harum maxime consequuntur natus. Ab minima sunt laboriosam ipsum alias quisquam exercitationem..</p>
+                <p>Aqui você encontra uma forma simples e rápida de gerar dietas personalizadas de acordo com seus objetivos, preferências e necessidades. Nosso objetivo é te ajudar a cuidar melhor da sua saúde com orientações nutricionais práticas e acessíveis. Comece agora mesmo a sua jornada rumo ao bem-estar!</p>
                 <div class="BotoesConteiner">
-                    <button onclick="changeContent()">Lorem, ipsum.</button>
+                    <button onclick="changeContent()">Saiba mais</button>
                 </div>
             </div>
             
@@ -72,11 +71,11 @@
         <section class="ConteudoSection" id="novoConteudo" style="display:none;">
             <div class="ConteinerConteudoSection">
                 <div class="TextosConteiner">
-                    <h1>Lorem.</h1>
-                    <p>Lorem ipsum dolor sit.</p>
-                    <button>Lorem.</button>
-                    <button>Lorem</button>
-                    <button>Lorem</button>
+                    <h1>Dieta e mais.</h1>
+                    <p>escolha uma opção:</p>
+                    <button>Criar dietas</button>
+                    <button>Calcular IMC</button>
+                    <button>Calcular Metabolismo</button>
                 </div>
                 <div class="ImagemConteudoSection">
                     <img src="../imagens/FundoHome6.jpeg" alt="Nova Imagem de Conteúdo">
@@ -101,8 +100,7 @@
         <div class="ConteinerConteudoSection">
             <div class="TextoConteudoSection">
                 <h1>Criar dietas</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
+                <p>Crie dietas personalizadas para você, baseadas no seu tipo, no que você gostas de comer e encontra</p>
                 <button onclick="window.location.href='../paginas/dietas/CriarDietas.html'">Criar dietas</button>
             </div>
             <div class="ImagemConteudoSection">
@@ -116,8 +114,7 @@
             </div>
             <div class="TextoConteudoSection">
                 <h1>Tipos de dieta</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
+                <p>Explore aqui os tipos de dietas e escolha a melhor</p>
                 <button onclick="window.location.href='../paginas/dietas/TiposDeDieta.html'">Tipos de dieta</button>
             </div>
         </div>
@@ -125,8 +122,7 @@
         <div class="ConteinerConteudoSection">
             <div class="TextoConteudoSection">
                 <h1>Calcular IMC</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
+                <p>Calcule o seu IMC para te ajudar a ficar dentro da dieta</p>
                 <button onclick="window.location.href='../paginas/calculo/CalcularImc.html'">Calcular IMC</button>
             </div>
             <div class="ImagemConteudoSection">
@@ -140,8 +136,7 @@
             </div>
             <div class="TextoConteudoSection">
                 <h1>Calcular Metabolismo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
+                <p>Calcule o seu metabolismo para que ajude no seu objetivo</p>
                 <button onclick="window.location.href='../paginas/calculo/CalcularMetabolismo.html'">Calcular Metabolismo</button>
             </div>
         </div>
@@ -149,8 +144,7 @@
         <div class="ConteinerConteudoSection">
             <div class="TextoConteudoSection">
                 <h1>Consumo de Agua</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt.Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Magnam, impedit.</p>
+                <p>Calcule a quantidade de agua ideal para o seu dia e fique saudável </p>
                 <button onclick="window.location.href='../paginas/calculo/ConsumoAgua.html'">Consumo de Agua</button>
             </div>
             <div class="ImagemConteudoSection">
