--- a/nutrifacil/frontend/paginas/Pagamento.html
+++ b/nutrifacil/frontend/paginas/Pagamento.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pagamento</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      text-align: center;
+      color: #333;
+    }
+
+    h1 {
+      margin-bottom: 10px;
+      color: #2c3e50;
+    }
+
+    .pix-box {
+      background-color: #fff;
+      border-radius: 8px;
+      padding: 30px;
+      max-width: 400px;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    .pix-box img {
+      width: 200px;
+      margin: 20px 0;
+    }
+
+    .pix-key {
+      background-color: #eee;
+      padding: 10px;
+      border-radius: 4px;
+      margin: 15px 0;
+      word-wrap: break-word;
+    }
+
+    .copy-btn {
+      background-color: #2c3e50;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .copy-btn:hover {
+      background-color: #34495e;
+    }
+
+    .msg {
+      margin-top: 10px;
+      font-size: 14px;
+      color: green;
+    }
+  </style>
 </head>
 <body>
 
-    <h1>PAGAMENTO</h1>
-    
+  <h1>Pagamento via PIX</h1>
+
+  <div class="pix-box">
+    <p>Escaneie o QR Code abaixo com seu aplicativo de banco:</p>
+    <img src="https://api.qrserver.com/v1/create-qr-code/?data=chavepix@exemplo.com.br&size=200x200" alt="QR Code PIX" />
+
+    <p>Ou copie a chave PIX:</p>
+    <div class="pix-key" id="pixKey">trabalhoA3nutri@pagbank.com</div>
+
+    <button class="copy-btn" onclick="copiarChavePix()">Copiar chave PIX</button>
+    <div class="msg" id="msg"></div>
+  </div>
+
+  <script>
+    function copiarChavePix() {
+      const chave = document.getElementById('pixKey').innerText;
+      navigator.clipboard.writeText(chave).then(() => {
+        document.getElementById('msg').innerText = 'Chave copiada com sucesso!';
+      }).catch(() => {
+        document.getElementById('msg').innerText = 'Erro ao copiar chave.';
+      });
+    }
+  </script>
+
 </body>
 </html>
