--- a/nutrifacil/frontend/paginas/dietas/CriarDietas.html
+++ b/nutrifacil/frontend/paginas/dietas/CriarDietas.html
@@ -7,13 +7,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #757070;
-      color: #ddd;
+      background: linear-gradient(to right, rgb(100, 248, 201), rgb(212, 31, 236));
+      color: #000000;
       padding: 30px;
     }
 
     .container {
-      background-color: #444;
+      background-color: #fafafa;
       padding: 20px;
       border-radius: 8px;
       max-width: 600px;
@@ -23,7 +23,7 @@
 
     h2 {
       text-align: center;
-      color: #fff;
+      color: #000000;
     }
 
     .form-group {
@@ -40,17 +40,17 @@
   width: 100%;
   padding: 8px 10px;
   font-size: 14px;
-  background-color: #333;
-  border: 1px solid #555;
+  background-color: #b4b4b4;
+  border: 1px solid #b8b8b8;
   border-radius: 4px;
-  color: #ddd;
+  color: #000000;
   box-sizing: border-box;
   height: 38px;
 }
 
 
     .btn {
-      background-color: #0055aa;
+      background-color: #54c4a4;;
       color: white;
       padding: 12px;
       border: none;
@@ -62,19 +62,19 @@
     }
 
     .btn:hover {
-      background-color: #003f88;
+      background-color: #54c4a4;;
     }
 
     .resultado {
       margin-top: 20px;
       padding: 15px;
-      background-color: #555;
+      background-color: #ffffff;
       border-radius: 5px;
-      color: #fff;
+      color: #000000;
     }
 
     .resultado strong {
-      color: #4fc3f7;
+      color: #54c4a4;;
     }
   </style>
 </head>
