--- a/nutrifacil/frontend/paginas/index.html
+++ b/nutrifacil/frontend/paginas/index.html
@@ -49,7 +49,7 @@
         <div class="ConteudoConteiner">
             <div class="TextosConteiner">
                 <p></p>
-                <h1>Site nutricionista A3</h1>
+                <h1>NutriFacil</h1>
                 <p>Aqui você encontra uma forma simples e rápida de gerar dietas personalizadas de acordo com seus objetivos, preferências e necessidades. Nosso objetivo é te ajudar a cuidar melhor da sua saúde com orientações nutricionais práticas e acessíveis. Comece agora mesmo a sua jornada rumo ao bem-estar!</p>
                 <div class="BotoesConteiner">
                     <button onclick="changeContent()">Saiba mais</button>
